<?xml version="1.0"?>
<package>
  <name>ros_test</name>
  <version>0.10.2</version>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libboost-date-time-dev</build_depend>
  <build_depend>libboost-thread-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>libboost-date-time-dev</run_depend>
  <run_depend>libboost-thread-dev</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
